# TOQM

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
libtoqm/: CMakeLists.txt  Environment.hpp  Expander.hpp  Filter.hpp  GateNode.hpp  LinkedStack.hpp  Node.cpp  Node.hpp  NodeMod.hpp  ScheduledGate.hpp  Toqm.cpp  Toqm.hpp  myParser.cpp  myParser.hpp
libtoqm/CostFunc/: CXFrontier.hpp  CXFull.hpp  SimpleCost.hpp
libtoqm/Expander/: DefaultExpander.hpp  GreedyTopK.hpp  NoSwaps.hpp
libtoqm/Filter/: HashFilter.hpp  HashFilter2.hpp
libtoqm/Latency/: Latency_1.hpp  Latency_1_2_6.hpp  Latency_1_3.hpp  Table.hpp
libtoqm/NodeMod/: GreedyMapper.hpp
libtoqm/Queue/: DefaultQueue.hpp  TrimSlowNodes.hpp
libtoqm/libtoqm/: CMakeLists.txt  CommonTypes.h  CommonTypes.hpp  CostFunc.hpp  CouplingMap.cpp  CouplingMap.hpp  CouplingMapParser.cpp  CouplingMapParser.h  CouplingMapParser.hpp  Environment.hpp  Expander.hpp  Filter.hpp  GateNode.hpp  Latency.hpp  LinkedStack.hpp  Node.cpp  Node.hpp  NodeMod.hpp  Qasm2Parser.cpp  Qasm2Parser.hpp  QasmObject.cpp  QasmObject.hpp  Queue.hpp  ScheduledGate.hpp  ScheduledGateStack.cpp  ScheduledGateStack.hpp  Toqm.cpp  Toqm.hpp  ToqmMapper.cpp  ToqmMapper.hpp  ToqmResult.hpp
libtoqm/libtoqm/CostFunc/: CXFrontier.hpp  CXFull.hpp  SimpleCost.hpp
libtoqm/libtoqm/Expander/: DefaultExpander.hpp  GreedyTopK.hpp  NoSwaps.hpp
libtoqm/libtoqm/Filter/: HashFilter.hpp  HashFilter2.hpp
libtoqm/libtoqm/Latency/: Latency_1.hpp  Latency_1_2_6.hpp  Latency_1_3.hpp  Table.hpp
libtoqm/libtoqm/NodeMod/: GreedyMapper.hpp
libtoqm/libtoqm/Queue/: DefaultQueue.hpp  TrimSlowNodes.hpp
mapper/: CMakeLists.txt  CouplingMap.cpp  CouplingMap.hpp  MapperUtils.cpp  MapperUtils.h  QasmObject.cpp  QasmObject.hpp  main.cpp
test/: CMakeLists.txt  TestBenchmarks.cpp  TestLatency.cpp  main.cpp  regenerate-test-data.sh
test/data/expected_output/large_tokyo/: 9symml_195_expected.qasm  adr4_197_expected.qasm  cm42a_207_expected.qasm  cm82a_208_expected.qasm  cm85a_209_expected.qasm  cycle10_2_110_expected.qasm  dc2_222_expected.qasm  dist_223_expected.qasm  ham15_107_expected.qasm  hwb8_113_expected.qasm  inc_237_expected.qasm  life_238_expected.qasm  mlp4_245_expected.qasm  pm1_249_expected.qasm  qft_10_expected.qasm  rd53_251_expected.qasm  rd73_252_expected.qasm  rd84_253_expected.qasm  root_255_expected.qasm  sqn_258_expected.qasm  sqrt8_260_expected.qasm  square_root_7_expected.qasm  urf1_278_expected.qasm  urf2_277_expected.qasm  z4_268_expected.qasm
test/data/expected_output/small_qx2/: 4mod5-v0_20_expected.qasm  4mod5-v1_22_expected.qasm  4mod5-v1_24_expected.qasm  alu-v0_27_expected.qasm  alu-v1_28_expected.qasm  alu-v1_29_expected.qasm  alu-v2_33_expected.qasm  alu-v4_37_expected.qasm  ham3_102_expected.qasm  miller_11_expected.qasm  mod5mils_65_expected.qasm  qft_4_expected.qasm  rd32-v1_68_expected.qasm
test/data/expected_output/small_qx2_benchmarks/: 3_17_13_expected.qasm  4gt11_82_expected.qasm  4gt11_84_expected.qasm  4gt13_92_expected.qasm  4mod5-v0_19_expected.qasm  4mod5-v0_20_expected.qasm  4mod5-v1_22_expected.qasm  4mod5-v1_24_expected.qasm  alu-v0_27_expected.qasm  alu-v1_28_expected.qasm  alu-v1_29_expected.qasm  alu-v2_33_expected.qasm  alu-v3_34_expected.qasm  alu-v3_35_expected.qasm  alu-v4_37_expected.qasm  ex-1_166_expected.qasm  mod5d1_63_expected.qasm  mod5mils_65_expected.qasm  qft_4_expected.qasm  rd32-v0_66_expected.qasm  rd32-v1_68_expected.qasm
test/util/: ComparisonHelpers.cpp  MapperBuilder.cpp  MapperBuilder.hpp  PrinterHelpers.cpp  PrinterHelpers.hpp
toqm/: CMakeLists.txt  main.cpp
